2001-09-18  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_config.c (bk_config_init): failure of load_config_from_file
	is non-fatal, and does not cause destruction of bk_config struct

2001-09-17  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_GENERAL_FLAGS): avoid Linux gcc warnings
	about signed vs. unsigned

	* lib/b_general.c: avoid Linux gcc warnings about signed vs. unsigned

2001-09-11  Seth Robertson  <seth@yeah.baka.org>

	* include/libbk_oscompat.h: Move NULL/MAX/MIN issues to oscompat.

2001-09-11    <dupuy@cs.columbia.edu>

	* lib/b_debug.c (bk_debug_iprint): avoid Unix dependency here too

	also cleanup unneeded /**/ for string concatenation

2001-09-10  Alexander Dupuy  <dupuy@cs.columbia.edu>

	* lib/b_error.c (be_error_output): avoid infinite recursion, Unix
	dependency

2001-09-10  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_fun.c (bk_fun_exit): Previous change leaked memory.
	Now properly handling !B.

	* include/libbk.h: BK_RETURN no longer coredump on !B

2001-09-08  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_bits.c: Bit operations created

2001-09-04  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_cksum.c (b_in_cksum): Add in_cksum from Net4BSD

2001-09-03  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_string.c: Create 64 bit version of atou and atoi.
	(bk_string_atoflag/bk_string_flagtoa): Hide flags representation
	for ascii conversion.
	(bk_string_quote): Function to quote strings for output.

2001-08-31  Seth Robertson  <seth@yeah.baka.org>

	* src/proto.c: Full prototype "Hello World".  Will need more work
	(or a different version!) once additional functionality becomes
	ready.

	* lib/b_error.c (bk_error_idump): Get working, reverse order.
	(be_error_output): Enable time output.
	(bk_error_iprint): output errors during runtime only if hi priority

2001-08-30  Seth Robertson  <seth@yeah.baka.org>

	* test/test_stringconv.c: Test program now operational.  atoish