@@ -1,5 +1,5 @@
 /*
- * $Id: libbk_oscompat.h,v 1.3 2001/09/11 17:20:09 seth Exp $
+ * $Id: libbk_oscompat.h,v 1.4 2001/09/25 08:25:50 dupuy Exp $
  *
  * ++Copyright LIBBK++
  *
@@ -30,6 +30,36 @@
 #ifndef MIN
 #define MIN(x,y) ((x) > (y) ? (y) : (x))
 #endif /* !MIN */
+
+/*
+ * Attempt to make things work on windows without cygwin
+ */
+#if defined(_WIN32) && !defined(__CYGWIN32__)
+typedef unsigned char u_int8_t;
+typedef unsigned short u_int16_t;
+typedef unsigned int u_int32_t;
+typedef unsigned long long u_int64_t;
+typedef int int32_t;
+typedef long long int64_t;
+typedef char *caddr_t;
+
+#define LOG_EMERG	0
+#define LOG_ALERT	1
+#define LOG_CRIT	2
+#define LOG_ERR		3
+#define LOG_WARNING	4
+#define LOG_NOTICE	5
+#define LOG_INFO	6
+#define LOG_DEBUG	7
+
+#define snprintf _snprintf
+#define vsnprintf _vsnprintf
+#define sleep(sec) _sleep(1000*(sec))
+
+#define BYTE_ORDER 4321
+#define LITTLE_ENDIAN 4321
+#define BIG_ENDIAN 1234
+#endif /* _WIN32 && !__CYGWIN32__ */
 
 
 #endif /* _libbk_oscompat_h_ */
