@@ -1,3 +1,15 @@
+2001-09-25    <dupuy@sysdetect.com>
+
+	* include/libbk_include.h: include winsock.h, process.h, instead
+	of various unix-specific include files
+
+	* include/libbk_oscompat.h: typedefs and #defines to work with mingw
+
+	* lib/b_general.c (bk_general_init): no openlog() call on windows
+	(bk_general_vsyslog): no syslog() calls on windows
+
+	* test/test_stringconv.c: avoid name/type clashes with int32/uint32
+
 2001-09-18  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* lib/b_config.c (bk_config_init): failure of load_config_from_file
